# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

action("integrate_cacert") {
  script = "build_integrate_cacert.py"
  inputs = []
  outputs = [ "$target_gen_dir/cacert.pem" ]
  args = [
    rebase_path("../systemCertificates", root_build_dir),
    rebase_path("$target_gen_dir/cacert.pem", root_build_dir),
  ]
}

ohos_prebuilt_etc("build_integrate_cacert") {
  relative_install_dir = "ssl/certs"
  source = "$target_gen_dir/cacert.pem"
  part_name = "certificate_manager"
  subsystem_name = "security"
  deps = [":integrate_cacert"]
}
 