# Copyright (c) 2025-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("certmanager_ani_group") {
  deps = [
    "./certificate_manager_ani:certmanager_ani",
    "./certificate_manager_ani:certmanager_ani_abc_etc"
  ]
}

group("certmanager_dialog_ani_group") {
  deps = [
    "./certificate_manager_dialog_ani:certmanager_dialog_ani",
    "./certificate_manager_dialog_ani:certmanager_dialog_ani_abc_etc"
  ]
}