# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/certificate_manager/cert_manager.gni")
import("//build/ohos.gni")

config("cm_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("ohcert_manager") {
  public_configs = [ ":cm_config" ]

  branch_protector_ret = "pac_ret"

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }

  version_script = "libcmndk.map"

  include_dirs = [
    "include"
  ]

  sources = [
    "src/cm_native_api.c"
  ]

  deps = [
    "${cert_manager_root_dir}/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
  ]

  if (os_level == "standard") {
    deps += [
      "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
      "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/os_dependency:libcert_manager_ipc_client_static",
      "${cert_manager_root_dir}/frameworks/cert_manager_standard/main/os_dependency:libcert_manager_log_mem_static",
    ]
  }

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "hilog:libhilog"
  ]

  cflags_cc = [
    "-Wall",
    "-Werror",
  ]

  innerapi_tags = [
    "ndk",
    "platformsdk"
  ]
  subsystem_name = "security"
  part_name = "certificate_manager"
}